# botcash

./: .gitignore  AGENTS.md  ARCHIVE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  RALPHREADME.md  loopclaude.sh  loopreview.sh
.github/workflows/: cd-deploy-nodes-gcp.yml  chore-delete-gcp-resources.yml  ci-build-crates.patch.yml  ci-build-crates.yml  ci-coverage.yml  ci-lint.yml  ci-unit-tests-os.yml  docs-deploy-firebase.yml  docs-dockerhub-description.yml  manual-zcashd-deploy.yml  release-drafter.yml  sub-build-docker-image.yml  sub-deploy-integration-tests-gcp.yml  sub-find-cached-disks.yml  sub-test-zebra-config.yml  zizmor.yml
bridges/activitypub/: pyproject.toml
bridges/activitypub/src/botcash_activitypub/: __init__.py  activitypub_types.py  botcash_client.py  config.py  federation.py  identity.py  main.py  models.py  protocol_mapper.py
bridges/activitypub/src/botcash_activitypub_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridges/activitypub/tests/: __init__.py  conftest.py  test_activitypub_types.py  test_config.py  test_federation.py  test_identity.py  test_models.py  test_protocol_mapper.py
bridges/discord/: pyproject.toml
bridges/discord/src/botcash_discord/: __init__.py  botcash_client.py  commands.py  config.py  embeds.py  identity.py  main.py  models.py
bridges/discord/src/botcash_discord_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridges/discord/tests/: __init__.py  conftest.py  test_botcash_client.py  test_config.py  test_embeds.py  test_identity.py  test_models.py
bridges/nostr/: pyproject.toml
bridges/nostr/src/botcash_nostr/: __init__.py  botcash_client.py  config.py  identity.py  main.py  models.py  nostr_types.py  protocol_mapper.py  relay.py
bridges/nostr/src/botcash_nostr_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridges/nostr/tests/: __init__.py  conftest.py  test_config.py  test_identity.py  test_models.py  test_nostr_types.py  test_protocol_mapper.py
bridges/telegram/: README.md  pyproject.toml
bridges/telegram/src/botcash_telegram/: __init__.py  botcash_client.py  config.py  handlers.py  identity.py  main.py  models.py
bridges/telegram/src/botcash_telegram_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
bridges/telegram/tests/: __init__.py  conftest.py  test_botcash_client.py  test_config.py  test_identity.py  test_models.py
bridges/twitter/: README.md  pyproject.toml
bridges/twitter/src/botcash_twitter/: __init__.py  botcash_client.py  config.py  crosspost.py  identity.py  main.py  models.py  twitter_client.py
bridges/twitter/src/botcash_twitter_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridges/twitter/tests/: __init__.py  conftest.py  test_config.py  test_crosspost.py  test_identity.py  test_models.py  test_twitter_client.py
lightwalletd/cmd/: root.go
lightwalletd/common/: network_params.go  network_params_test.go
lightwalletd/frontend/: rpc_client.go  service.go
ralph/: ARCHIVE2.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md
specs/: INDEX.md  addresses.md  attention-market.md  branding.md  bridges.md  consensus.md  discovery.md  genesis.md  governance.md  messaging.md  mining.md  moderation.md  network.md  privacy.md  recovery.md  scaling.md  skill.md  social.md  wallet.md
zashi-android/: gradle.properties
zashi-android/app/: build.gradle.kts
zashi-ios/: secant-distrib-Info.plist  zashi-internal-Info.plist
zashi-ios/secant/: AppDelegate.swift  secant-mainnet-Info.plist  secant-testnet-Info.plist  zashi-testnet-Info.plist
zashi-ios/secant.xcodeproj/: project.pbxproj
zashi-ios/secantTests/NetworkTests/: NetworkTests.swift
zebra-chain/: Cargo.toml
zebra-chain/src/: parameters.rs  transaction.rs  transparent.rs  work.rs
zebra-chain/src/block/: genesis.rs
zebra-chain/src/parameters/: attention.rs  constants.rs  network.rs  network_upgrade.rs  oracle.rs  protocol_upgrades.rs
zebra-chain/src/primitives/: address.rs
zebra-chain/src/tests/: vectors.rs
zebra-chain/src/transaction/: memo.rs
zebra-chain/src/transparent/: address.rs  serialize.rs
zebra-chain/src/work/: difficulty.rs  randomx.rs
zebra-consensus/src/: block.rs  checkpoint.rs
zebra-consensus/src/block/: check.rs  tests.rs
zebra-consensus/src/checkpoint/: list.rs
zebra-network/src/: config.rs
zebra-rpc/: Cargo.toml
zebra-rpc/proto/: indexer.proto
zebra-rpc/src/: indexer.rs  methods.rs
zebra-rpc/src/indexer/: batch.rs  bridges.rs  channels.rs  governance.rs  moderation.rs  multisig.rs  protocol_upgrades.rs  recovery.rs
zebra-rpc/src/methods/: types.rs
(+40 files in other folders)
